Correct <span></span> in HTML output

Fix issue where HTML export has too many closing span tags in it.

Thanks to Martin Ueding von.kde.org@martin-ueding.de for patch.

REVIEW: 112507
BUG: 324476
FIXED-IN: 4.12
(cherry picked from commit 9f73fbb57f0f2b2ec5c7301b9fc632cde6bd187d)